added recyclerview, adapter, networking, and dialog

--- a/app/src/main/res/layout/dialog_add_todo.xml
+++ b/app/src/main/res/layout/dialog_add_todo.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/add_todo_name"
+        android:id="@+id/new_todo_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/standard_margin"
@@ -24,6 +24,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <RadioGroup
+        android:id="@+id/group_priority"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/standard_margin"
@@ -31,7 +32,7 @@
         android:layout_marginEnd="@dimen/standard_margin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/add_todo_name">
+        app:layout_constraintTop_toBottomOf="@+id/new_todo_name">
 
         <RadioButton
             android:id="@+id/radio_high_priority"
